Bug 986793 - Fix warnings in cubeb_audiotrack.c, and allow mixed declaration and code in cubeb_opensl.c. r=cpeterson